--- a/package.json
+++ b/package.json
@@ -1,23 +1,20 @@
 {
   "name": "FE-standards",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint-staged": "lint-staged",
+    "commit": "git cz",
     "commitlint": "commitlint --config commitlint.config.js -e -V",
-    "prepare": "husky install"
-  },
-  "config": {
-    "commitizen": {
-      "path": "./node_modules/cz-customizable"
-    }
+    "prepare": "husky install",
+    "release": "standard-version"
   },
   "lint-staged": {
     "*.{js, vue}": [
       "prettier --write",
-      "eslint --cache --fix",
+      "eslint --ext .tsx,.ts --fix",
       "git add"
     ]
   },
@@ -33,9 +30,32 @@
   },
   "homepage": "https://github.com/detonateyin/FE-standards#readme",
   "devDependencies": {
+    "@commitlint/cli": "^12.1.1",
+    "@commitlint/config-conventional": "^12.1.1",
+    "@typescript-eslint/eslint-plugin": "^4.22.0",
+    "@typescript-eslint/parser": "^4.22.0",
     "commitizen": "^4.2.3",
-    "cz-customizable": "^6.3.0",
+    "eslint": "^7.24.0",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-config-prettier": "^8.2.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-prettier": "^3.4.0",
+    "eslint-plugin-react": "^7.23.2",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "git-cz": "^4.7.6",
     "husky": "^6.0.0",
-    "lint-staged": "^10.5.4"
+    "lint-staged": "^10.5.4",
+    "prettier": "^2.2.1",
+    "standard-version": "^9.2.0",
+    "typescript": "^4.2.4"
+  },
+  "dependencies": {
+    "react": "^17.0.2"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/git-cz"
+    }
   }
 }
